Source/WebCore: Add an internal flag to accept multiple shadow roots for the purpose of tests. https://bugs.webkit.org/show_bug.cgi?id=78453

Reviewed by Hajime Morita.

This patch introduces a flag to enable multiple shadow subtrees.
This flag is intended to be used for testing purpose for a while.
We will remove it later.

No new tests, no change in behavior.

* WebCore.exp.in:
* bindings/generic/RuntimeEnabledFeatures.cpp:
(WebCore):
* bindings/generic/RuntimeEnabledFeatures.h:
(RuntimeEnabledFeatures):
(WebCore::RuntimeEnabledFeatures::multipleShadowSubtreesEnabled):
(WebCore::RuntimeEnabledFeatures::setMultipleShadowSubtreesEnabled):
* dom/ShadowRoot.cpp:
(WebCore::ShadowRoot::create):
* dom/ShadowRootList.cpp:
(WebCore::ShadowRootList::pushShadowRoot):
* testing/Internals.cpp:
(WebCore::Internals::setMultipleShadowSubtreesEnabled):
(WebCore):
* testing/Internals.h:
(Internals):
* testing/Internals.idl:

LayoutTests: Needs an internal flag to accept multiple shadow roots for the purpose of tests
https://bugs.webkit.org/show_bug.cgi?id=78453

Reviewed by Hajime Morita.

* fast/dom/shadow/shadow-root-js-api.html:

git-svn-id: svn://svn.chromium.org/blink/trunk@108003 bbb929c8-8fbe-4397-9dbb-9b2b20218538