third_party/WebKit/Source/WebCore/bindings/generic/RuntimeEnabledFeatures.cpp
@@ -183,6 +183,7 @@ bool RuntimeEnabledFeatures::isMediaSourceEnabled = false;
 
 #if ENABLE(SHADOW_DOM)
 bool RuntimeEnabledFeatures::isShadowDOMEnabled = false;
+bool RuntimeEnabledFeatures::isMultipleShadowSubtreesEnabled = false;
 #endif
 
 } // namespace WebCore
