third_party/WebKit/Source/WebCore/dom/ShadowRootList.cpp
@@ -30,6 +30,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "Document.h"
 #include "Element.h"
+#include "RuntimeEnabledFeatures.h"
 #include "ShadowRoot.h"
 
 namespace WebCore {
@@ -45,9 +46,12 @@ ShadowRootList::~ShadowRootList()
 
 void ShadowRootList::pushShadowRoot(ShadowRoot* shadowRoot)
 {
-    // FIXME: We don't support multiple shadow root subtrees yet.
-    // https://bugs.webkit.org/show_bug.chi?id=77503
+#if ENABLE(SHADOW_DOM)
+    if (!RuntimeEnabledFeatures::multipleShadowSubtreesEnabled())
+        ASSERT(!hasShadowRoot());
+#else
     ASSERT(!hasShadowRoot());
+#endif
 
     m_shadowRoots.push(shadowRoot);
 }
