third_party/WebKit/Source/WebCore/testing/Internals.cpp
@@ -55,6 +55,12 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "SpellChecker.h"
 #include "TextIterator.h"
 
+#if ENABLE(SHADOW_DOM)
+#include "RuntimeEnabledFeatures.h"
+#else
+#include <wtf/UnusedParam.h>
+#endif
+
 #if ENABLE(INPUT_COLOR)
 #include "ColorChooser.h"
 #endif
@@ -234,6 +240,15 @@ void Internals::removeShadowRoot(Element* host, ExceptionCode& ec)
     }
 
     host->removeShadowRoot();
+}
+
+void Internals::setMultipleShadowSubtreesEnabled(bool enabled)
+{
+#if ENABLE(SHADOW_DOM)
+    RuntimeEnabledFeatures::setMultipleShadowSubtreesEnabled(enabled);
+#else
+    UNUSED_PARAM(enabled);
+#endif
 }
 
 Element* Internals::includerFor(Node* node, ExceptionCode& ec)
